example/simple-service/whoami-deployment.yaml
# https://gitlab.com/nanuchi/youtube-tutorial-series/-/blob/master/kubernetes-configuration-file-explained/nginx-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment
  labels:
    app: whomai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - containerPort: 80
