example/simple-service/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
#  type: NodePort
  selector:
    app: whoami
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
