example/simple-service/whoami-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whoami-virtualservice
spec:
  hosts:
    - "dev.sophiagenetics.com"
  gateways:
    - istio-system/istio-gateway
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: whoami-service
            port:
              number: 80
